# src/docs/swagger.json
@@ -1,11 +1,11 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "TasksRunner API",
-    "description": "API for TasksRunner Application",
+    "title": "khidma API",
+    "description": "API for khidma Application",
     "contact": {
-      "name": "TasksRunner",
-      "url": "https://tasksrunner.onrender.com",
+      "name": "khidma",
+      "url": "https://khidma.onrender.com",
       "email": "ahmedelasiriy@gmail.com"
     },
     "version": "1.0.0"
@@ -16,8 +16,8 @@
       "url": "{serverUrl}/api/{apiVersion}",
       "variables": {
         "serverUrl": {
-          "default": "https://tasksrunner.onrender.com",
-          "enum": ["https://tasksrunner.onrender.com", "http://localhost:8080"]
+          "default": "https://khidma.onrender.com",
+          "enum": ["https://khidma.onrender.com", "http://localhost:8080"]
         },
         "apiVersion": {
           "default": "v1"
@@ -173,7 +173,29 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/User"
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string"
+                    },
+                    "fullName": {
+                      "type": "string"
+                    },
+                    "email": {
+                      "type": "string"
+                    },
+                    "profilePicture": {
+                      "type": "object",
+                      "properties": {
+                        "url": {
+                          "type": "string"
+                        },
+                        "publicId": {
+                          "type": "string"
+                        }
+                      }
+                    }
+                  }
                 }
               }
             }
@@ -208,7 +230,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/AuthResponse"
+                  "$ref": "#/components/schemas/User"
                 }
               }
             }
@@ -608,6 +630,35 @@
   },
   "components": {
     "schemas": {
+      "User": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "string"
+          },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "profilePicture": {
+            "type": "object",
+            "properties": {
+              "url": {
+                "type": "string"
+              },
+              "publicId": {
+                "type": "string"
+              }
+            }
+          }
+        },
+        "required": ["_id", "firstName", "lastName", "email", "profilePicture"]
+      },
       "UserLogin": {
         "type": "object",
         "properties": {
@@ -772,7 +823,7 @@
         "in": "header",
         "flows": {
           "implicit": {
-            "authorizationUrl": "https://tasksrunner.onrender.com/auth/login"
+            "authorizationUrl": "https://khidma.onrender.com/auth/login"
           }
         }
       }
